--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
    </head>
    
    <body>
-   <h1>Homepage</h1>
-   <a>click me</a>
+    <h1>Hello World!</h1>
+    <a href="https://www.theodinproject.com/about">click me</a>
+   
+    <a href="pages/about.html">About</a>
+
+    <img src="images/dog.jpg" alt="Black Buggy Eyed Dog">
    </body>
 </html>
